Enable Java 17 support
Update dependencies to support Java 17.

For backward compatibility with spring security, adding the java option --add-opens java.base/java.util=ALL-UNNAMED is necessary.

Adding the option mitigates the following exception:

java.lang.reflect.InaccessibleObjectException: Unable to make public boolean java.util.Arrays$ArrayList.contains(java.lang.Object) accessible: module java.base does not "opens java.util" to unnamed module @7dc5e7b4