@@ -26,7 +26,8 @@
     <commons-lang3.version>3.12.0</commons-lang3.version>
     <commons-text.version>1.10.0</commons-text.version>
     <cxf.version>3.5.5</cxf.version>
-    <eclipselink.version>2.7.8</eclipselink.version>
+    <eclipselink.version>2.7.11</eclipselink.version>
+    <eclipselink.asm.version>9.3.0</eclipselink.asm.version>
     <failureaccess.version>1.0.1</failureaccess.version>
     <freemarker.version>2.3.31</freemarker.version>
     <functional.version>1.4.2</functional.version>
@@ -375,7 +376,10 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <useFile>false</useFile>
-          <argLine>-Dfile.encoding=UTF-8</argLine>
+          <argLine>
+            -Dfile.encoding=UTF-8
+            --add-opens java.base/java.util=ALL-UNNAMED
+          </argLine>
           <!-- see https://jira.codehaus.org/browse/SUREFIRE-951 -->
           <systemPropertyVariables>
             <M2_REPO>${settings.localRepository}</M2_REPO>
@@ -685,7 +689,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-dependency-plugin</artifactId>
-          <version>3.1.2</version>
+          <version>3.6.0</version>
           <executions>
             <execution>
               <id>analyze</id>
@@ -697,18 +701,6 @@
               </configuration>
             </execution>
           </executions>
-          <dependencies>
-            <dependency>
-              <groupId>org.ow2.asm</groupId>
-              <artifactId>asm</artifactId>
-              <version>9.3</version>
-            </dependency>
-            <dependency>
-              <groupId>org.apache.maven.shared</groupId>
-              <artifactId>maven-dependency-analyzer</artifactId>
-              <version>1.11.1</version>
-            </dependency>
-          </dependencies>
         </plugin>
         <plugin>
           <groupId>org.apache.karaf.tooling</groupId>
@@ -959,6 +951,11 @@
         <version>1.2.1</version>
       </dependency>
       <dependency>
+        <groupId>jakarta.annotation</groupId>
+        <artifactId>jakarta.annotation-api</artifactId>
+        <version>1.3.5</version>
+      </dependency>
+      <dependency>
         <groupId>com.sun.mail</groupId>
         <artifactId>jakarta.mail</artifactId>
         <version>${jakarta.mail.version}</version>
@@ -997,7 +994,7 @@
       <dependency>
         <groupId>org.eclipse.persistence</groupId>
         <artifactId>org.eclipse.persistence.asm</artifactId>
-        <version>${eclipselink.version}</version>
+        <version>${eclipselink.asm.version}</version>
       </dependency>
       <dependency>
         <groupId>org.eclipse.persistence</groupId>
@@ -1150,7 +1147,7 @@
         <groupId>org.easymock</groupId>
         <artifactId>easymock</artifactId>
         <scope>test</scope>
-        <version>4.3</version>
+        <version>5.1.0</version>
       </dependency>
       <dependency>
         <groupId>org.easymock</groupId>
